# Stochastic-Volumetric-LED-Display

./: .gitattributes  .gitignore  .gitmodules  2025-01-04-15:40:55-ledpos.json  Cargo.toml  README.md  bufferlessVideoCapture.py  build.rs  containTemp.json  display.py  display.py.bak  display_xz.py  display_xz_test.py  distancetest.json  fake_led.py  fastled_esp8266.ino  firstGood.json  idea.md  largetank.json  largetanksecond.json  ledPos.json  led_manager.py  list_cameras.py  other.txt  read_vled.py  receive_esp8266_speed.ino  record_data.vled  record_esp_data.bvled  repairedContainer.json  sanity.py  scan.py  scan_esp8266.py  speedTest.py  start.sh  status  svled.toml  temp-pos-2025-01-04-17:15:40  tempPos.json.kicked-out  test.py  udpOut.bvled  (+6 more)
.github/ci/docker/: rpi-xcompile.Dockerfile
.github/workflows/: rust-linux.yml  rust-macos-apple-silicon.yml  rust-macos.yml  rust-raspbian.yml  rust-windows.yml  rust.yml
docs/: calibration.md  config.md  leds.md  saving_animations.md  unity.md  usage.md
esp-code/esp_demo/: README.md
esp-code/esp_main/: platformio.ini
esp-code/esp_main/src/: main.cpp
esp-code/esp_receive_serial_send_gyro/: platformio.ini
esp-code/esp_receive_serial_send_gyro/src/: main.cpp
esp-code/read_vled_esp32/src/: main.cpp
esp-code/receive_esp32_udp/src/: main.cpp
esp-code/receive_esp8266_udp_neopixel/: platformio.ini
esp-code/receive_esp8266_udp_neopixel/src/: main.cpp
esp-code/receive_esp8266_udp_parallel/src/: main.cpp
esp-code/receive_esp_serial/: platformio.ini
esp-code/receive_esp_serial/src/: main.cpp
esp-code/receive_esp_serial_parallel/: platformio.ini
esp-code/receive_esp_serial_parallel/src/: main.cpp
esp-code/receive_esp_serial_parallel_async/: multi_esptool.py  platformio.ini
esp-code/receive_esp_serial_parallel_async/src/: main.cpp
esp-code/webserver_jar_esp32/src/: main.cpp
esp_code/Tests/: platformio.ini
esp_code/Tests/src/: main.cpp
esp_code/esp_main/: platformio.ini
esp_code/read_vled_esp32/: platformio.ini
esp_code/receive_esp32_udp/: platformio.ini
esp_code/webserver_jar_esp32/: platformio.ini
read_esp8266/: read_esp8266.ino
receive_esp32/: receive_esp32.ino
receive_esp8266/: esp8266_udp.py
receive_esp8266_serial/: receive_esp8266_serial.ino
receive_esp8266_serial_parallel/: receive_esp8266_serial_parallel.ino
receive_esp8266_udp_parallel/: receive_esp8266_udp_parallel.ino
src/: demo.rs  driver_wizard.rs  gui.rs  led_manager.rs  lib.rs  main.rs  read_vled.rs  scan.rs  speedtest.rs  unity.rs  utils.rs
src-py/: led_manager.py  post_process.py  read_vled.py  scan.py  unity_get_event.py  unity_manager_old.py  unity_send_pos.py
svled-gui/svled-gui/: build.rs
ui/: app-window.slint  config.slint
unity/Unity3d-PhysicsGun/: Assembly-CSharp-Editor-firstpass.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.csproj  Unity3d-PhysicsGun.sln
(+23 files in other folders)
