[package]
name = "svled"
version = "0.1.2"
edition = "2021"

[dependencies]
chrono = "0.4.39"
ctrlc = "3.4.5"
env_logger = "0.11.6"
gumdrop = "0.8.1"
indicatif = "0.17.9"
log = "0.4.22"
opencv = { version = "0.93.5", default-features = false, features = [
    "highgui",
    "videoio",
    "imgproc",
], optional = true }
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serialport = "4.6.1"
toml = "0.8.19"
slint = { version = "1.8.0", optional = true }
inquire = "0.7.5"
crossbeam-channel = "0.5.15"

[build-dependencies]
slint-build = { version = "1.8.0", optional = true }

[features]
default = ["scan"]
gui = ["dep:slint", "dep:slint-build"]
scan = ["dep:opencv"]

[lib]
name = "svled"
path = "src/lib.rs"

[[bin]]
name = "svled"
path = "src/main.rs"
