[package]
name = "svled"
version = "0.1.3"
edition = "2024"
description = "A program to map LEDs in 3D space"
documentation = "https://github.com/timothyhay256/Stochastic-Volumetric-LED-Display/wiki"
repository = "https://github.com/timothyhay256/Stochastic-Volumetric-LED-Display"
license = "GPL-3.0-or-later"
categories = ["computer-vision"]

[dependencies]
chrono = "0.4.39"
env_logger = "0.11.6"
gumdrop = "0.8.1"
indicatif = "0.17.9"
log = "0.4.22"
opencv = { version = "0.95.1", default-features = false, features = [
    "highgui",
    "videoio",
    "imgproc",
], optional = true }
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serialport = "4.6.1"
toml = "0.8.19"
inquire = "0.7.5"
crossbeam-channel = "0.5.15"
image = "0.25.6"
regex = "1.11.1"
anyhow = "1.0.98"
ctrlc = "3.4.7"

[features]
default = ["scan"]
scan = ["dep:opencv"]

[lib]
name = "svled"
path = "src/lib.rs"

[[bin]]
name = "svled"
path = "src/main.rs"
