[package]
name = "svled"
version = "0.1.3"
edition = "2024"
description = "A program to map LEDs in 3D space"
documentation = "https://github.com/timothyhay256/Stochastic-Volumetric-LED-Display/wiki"
repository = "https://github.com/timothyhay256/Stochastic-Volumetric-LED-Display"
license = "GPL-3.0-or-later"
categories = ["computer-vision"]

[dependencies]
chrono = "0.4.42"
env_logger = "0.11.8"
gumdrop = "0.8.1"
indicatif = "0.18.0"
log = "0.4.28"
opencv = { version = "0.96.0", default-features = false, features = [
    "highgui",
    "videoio",
    "imgproc",
], optional = true }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serialport = "4.7.3"
toml = "0.9.7"
inquire = "0.9.1"
crossbeam-channel = "0.5.15"
image = "0.25.8"
regex = "1.11.3"
anyhow = "1.0.100"
ctrlc = "3.5.0"

[features]
default = ["scan"]
scan = ["dep:opencv"]

[lib]
name = "svled"
path = "src/lib.rs"

[[bin]]
name = "svled"
path = "src/main.rs"
